testdata/parser/ok/TPOK_Negate.java
int main() {
		printInt(-9);
		return 0;
}
