testdata/parser/error/MissingClosingBrace.java
int main() {
	printInt(new BT().Start());
// missing close-brace